--- a/julia/problem_013.ipynb
+++ b/julia/problem_013.ipynb
@@ -5,53 +5,53 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 13\n",
+    "# Problem 13\n",
     "https://projecteuler.net/problem=13"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "id": "9213497d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: replacing module euler.\n"
-     ]
-    }
-   ],
-   "source": [
-    "using BenchmarkTools\n",
-    "include(\"./euler.jl\");"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "cb31a127",
+   "execution_count": 1,
+   "id": "4ee74fa8",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Reading file ...\n"
+      "Julia v1.11.1\n"
      ]
     }
    ],
    "source": [
+    "println(\"Julia v\", VERSION)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "9213497d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "cb31a127",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "file_name = \"0013_large_sum.txt\"\n",
-    "if isfile(\"../data/\" * file_name)\n",
-    "    println(\"Reading file ...\")\n",
-    "    raw = open(\"../data/\" * file_name) do f\n",
+    "file_path = \"../data/\"\n",
+    "\n",
+    "if isfile(file_path * file_name)\n",
+    "    raw = open(file_path * file_name) do f\n",
     "        readlines(f)\n",
     "    end\n",
-    "end\n",
-    "\n",
-    "nums = [parse(BigInt, n) for n in raw];"
+    "end;"
    ]
   },
   {
@@ -59,15 +59,22 @@
    "id": "7f1b5708",
    "metadata": {},
    "source": [
-    "#### Solution 1 (string conversion)"
+    "### Solution 1 (parse string)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "779777a0",
+   "execution_count": 4,
+   "id": "9a6f0b8a",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  17.583 μs (532 allocations: 14.07 KiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -79,46 +86,7 @@
     }
    ],
    "source": [
-    "parse(Int64, join(reverse(last(digits(sum(nums)), 10))))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "2147aabc",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: 10000 samples with 10 evaluations.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m1.367 μs\u001b[22m\u001b[39m … \u001b[35m876.192 μs\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m0.00% … 61.08%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m1.600 μs               \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m1.799 μs\u001b[22m\u001b[39m ± \u001b[32m  8.769 μs\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m2.97% ±  0.61%\n",
-       "\n",
-       "  \u001b[39m▂\u001b[39m▅\u001b[39m▆\u001b[39m█\u001b[34m▇\u001b[39m\u001b[39m▆\u001b[39m▄\u001b[32m▂\u001b[39m\u001b[39m▁\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m▂\n",
-       "  \u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m█\u001b[34m█\u001b[39m\u001b[39m█\u001b[39m█\u001b[32m█\u001b[39m\u001b[39m█\u001b[39m█\u001b[39m█\u001b[39m▇\u001b[39m▇\u001b[39m▆\u001b[39m█\u001b[39m▇\u001b[39m█\u001b[39m▇\u001b[39m█\u001b[39m▇\u001b[39m▆\u001b[39m▅\u001b[39m▆\u001b[39m▆\u001b[39m▆\u001b[39m▆\u001b[39m▆\u001b[39m▄\u001b[39m▆\u001b[39m▆\u001b[39m▅\u001b[39m▃\u001b[39m▄\u001b[39m▆\u001b[39m▄\u001b[39m▅\u001b[39m▄\u001b[39m▁\u001b[39m▃\u001b[39m▃\u001b[39m▅\u001b[39m▄\u001b[39m▄\u001b[39m▄\u001b[39m▅\u001b[39m▅\u001b[39m▅\u001b[39m▆\u001b[39m▅\u001b[39m▅\u001b[39m▆\u001b[39m▄\u001b[39m▅\u001b[39m▄\u001b[39m▅\u001b[39m▁\u001b[39m▅\u001b[39m▁\u001b[39m▅\u001b[39m \u001b[39m█\n",
-       "  1.37 μs\u001b[90m      \u001b[39m\u001b[90mHistogram: \u001b[39m\u001b[90m\u001b[1mlog(\u001b[22m\u001b[39m\u001b[90mfrequency\u001b[39m\u001b[90m\u001b[1m)\u001b[22m\u001b[39m\u001b[90m by time\u001b[39m      4.99 μs \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m1.68 KiB\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m36\u001b[39m."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "b = @benchmark parse(Int64, join(reverse(last(digits(sum(nums)), 10))))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "d36e0051",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "euler.save_benchmark(13, b);"
+    "@btime parse(Int64, join(reverse(last(digits(sum(parse(BigInt, n) for n in raw)), 10))))"
    ]
   },
   {
@@ -126,41 +94,40 @@
    "id": "075a412b",
    "metadata": {},
    "source": [
-    "#### Solution 2 (no string conversion)"
+    "### Solution 2 (undigit digits)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "64e6982d",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "undigit (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function undigit(l::Array{Int64, 1})::Int64\n",
     "    s = 0 # sum\n",
-    "    for (i, n) in enumerate(reverse(l))\n",
+    "    for (i, n) in enumerate((l))\n",
     "        s += n * 10^(i-1)\n",
     "    end\n",
     "    return s\n",
-    "end"
+    "end\n",
+    "\n",
+    "@assert undigit([1, 2, 3, 4, 5]) == 54321"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "7d255c54",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  17.833 μs (504 allocations: 13.13 KiB)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -172,28 +139,34 @@
     }
    ],
    "source": [
-    "undigit(reverse(last(digits(sum(nums)), 10)))"
+    "@btime undigit(last(digits(sum(parse(BigInt, n) for n in raw)), 10))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "82f41eb1",
+   "metadata": {},
+   "source": [
+    "### Solution 3 (no BigInt)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "a6b90929",
+   "execution_count": 7,
+   "id": "144a876d",
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  5.417 μs (104 allocations: 3.19 KiB)\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "BenchmarkTools.Trial: 10000 samples with 10 evaluations.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m1.021 μs\u001b[22m\u001b[39m … \u001b[35m529.292 μs\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m0.00% … 52.83%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m1.158 μs               \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m1.258 μs\u001b[22m\u001b[39m ± \u001b[32m  5.291 μs\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m2.22% ±  0.53%\n",
-       "\n",
-       "  \u001b[39m \u001b[39m \u001b[39m \u001b[39m▂\u001b[39m█\u001b[39m \u001b[34m▁\u001b[39m\u001b[39m▂\u001b[39m \u001b[39m \u001b[32m \u001b[39m\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \n",
-       "  \u001b[39m▃\u001b[39m▃\u001b[39m▂\u001b[39m█\u001b[39m█\u001b[39m█\u001b[34m█\u001b[39m\u001b[39m█\u001b[39m▅\u001b[39m▄\u001b[32m▄\u001b[39m\u001b[39m▃\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▁\u001b[39m▂\u001b[39m▂\u001b[39m▁\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▂\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▂\u001b[39m \u001b[39m▃\n",
-       "  1.02 μs\u001b[90m         Histogram: frequency by time\u001b[39m        2.48 μs \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m1.05 KiB\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m13\u001b[39m."
+       "5537376230"
       ]
      },
      "metadata": {},
@@ -201,23 +174,33 @@
     }
    ],
    "source": [
-    "b = @benchmark undigit(reverse(last(digits(sum(nums)), 10)))"
+    "@btime round(Int, sum(parse(Int64, first(s, 10)) for s in raw) / length(raw))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "69ba648b",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "id": "18a1eebc",
+   "execution_count": null,
+   "id": "f11178a3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "euler.save_benchmark(13, b);"
+    "include(\"./euler.jl\");\n",
+    "bm = @benchmark round(Int, sum(parse(Int64, first(s, 10)) for s in raw) / length(raw))\n",
+    "euler.save_benchmark(13, bm);"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -225,7 +208,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
