--- a/julia/problem_002.ipynb
+++ b/julia/problem_002.ipynb
@@ -158,14 +158,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "id": "baf79c30",
    "metadata": {},
    "outputs": [],
    "source": [
     "include(\"./euler.jl\");\n",
-    "b = @benchmark sum_even_fib(4_000_000)\n",
-    "euler.save_benchmark(2, b);"
+    "bm = @benchmark sum_even_fib(4_000_000)\n",
+    "euler.save_benchmark(2, bm);"
    ]
   }
  ],
