--- a/julia/problem_004.ipynb
+++ b/julia/problem_004.ipynb
@@ -251,14 +251,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
    "id": "3daef5f3",
    "metadata": {},
    "outputs": [],
    "source": [
     "include(\"./euler.jl\");\n",
-    "b = @benchmark ps(3)\n",
-    "euler.save_benchmark(4, b);"
+    "bm = @benchmark ps(3)\n",
+    "euler.save_benchmark(4, bm);"
    ]
   }
  ],
