--- a/julia/problem_005.ipynb
+++ b/julia/problem_005.ipynb
@@ -386,19 +386,19 @@
    "id": "32937635",
    "metadata": {},
    "source": [
-    "### Save best performance"
+    "### Save benchmark"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "id": "0682c8e2",
    "metadata": {},
    "outputs": [],
    "source": [
     "include(\"./euler.jl\");\n",
-    "b = @benchmark lcm(11:20)\n",
-    "euler.save_benchmark(5, b);"
+    "bm = @benchmark lcm(11:20)\n",
+    "euler.save_benchmark(5, bm);"
    ]
   }
  ],
