--- a/julia/problem_009.ipynb
+++ b/julia/problem_009.ipynb
@@ -42,7 +42,7 @@
    "id": "18a218f8",
    "metadata": {},
    "source": [
-    "#### Solution 1 (brute force)"
+    "### Solution 1 (brute force)"
    ]
   },
   {
