--- a/python/problem_011.ipynb
+++ b/python/problem_011.ipynb
@@ -5,7 +5,7 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 11\n",
+    "# Problem 11\n",
     "https://projecteuler.net/problem=11"
    ]
   },
@@ -14,40 +14,37 @@
    "execution_count": 1,
    "id": "574cf3df",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python v3.11.10\n"
+     ]
+    }
+   ],
    "source": [
-    "import euler"
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8751771f",
+   "metadata": {},
+   "source": [
+    "### Solution"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "81c2912c",
+   "id": "b69b4b58",
    "metadata": {},
    "outputs": [],
    "source": [
-    "grid = [\n",
-    "    [8 ,  2, 22, 97, 38, 15,  0, 40,  0, 75,  4,  5,  7, 78, 52, 12, 50, 77, 91,  8], \n",
-    "    [49, 49, 99, 40, 17, 81, 18, 57, 60, 87, 17, 40, 98, 43, 69, 48,  4, 56, 62,  0], \n",
-    "    [81, 49, 31, 73, 55, 79, 14, 29, 93, 71, 40, 67, 53, 88, 30,  3, 49, 13, 36, 65], \n",
-    "    [52, 70, 95, 23,  4, 60, 11, 42, 69, 24, 68, 56,  1, 32, 56, 71, 37,  2, 36, 91], \n",
-    "    [22, 31, 16, 71, 51, 67, 63, 89, 41, 92, 36, 54, 22, 40, 40, 28, 66, 33, 13, 80], \n",
-    "    [24, 47, 32, 60, 99,  3, 45,  2, 44, 75, 33, 53, 78, 36, 84, 20, 35, 17, 12, 50], \n",
-    "    [32, 98, 81, 28, 64, 23, 67, 10, 26, 38, 40, 67, 59, 54, 70, 66, 18, 38, 64, 70], \n",
-    "    [67, 26, 20, 68,  2, 62, 12, 20, 95, 63, 94, 39, 63,  8, 40, 91, 66, 49, 94, 21], \n",
-    "    [24, 55, 58,  5, 66, 73, 99, 26, 97, 17, 78, 78, 96, 83, 14, 88, 34, 89, 63, 72], \n",
-    "    [21, 36, 23,  9, 75,  0, 76, 44, 20, 45, 35, 14,  0, 61, 33, 97, 34, 31, 33, 95], \n",
-    "    [78, 17, 53, 28, 22, 75, 31, 67, 15, 94,  3, 80,  4, 62, 16, 14,  9, 53, 56, 92], \n",
-    "    [16, 39,  5, 42, 96, 35, 31, 47, 55, 58, 88, 24,  0, 17, 54, 24, 36, 29, 85, 57], \n",
-    "    [86, 56,  0, 48, 35, 71, 89,  7,  5, 44, 44, 37, 44, 60, 21, 58, 51, 54, 17, 58], \n",
-    "    [19, 80, 81, 68,  5, 94, 47, 69, 28, 73, 92, 13, 86, 52, 17, 77,  4, 89, 55, 40], \n",
-    "    [ 4, 52,  8, 83, 97, 35, 99, 16,  7, 97, 57, 32, 16, 26, 26, 79, 33, 27, 98, 66], \n",
-    "    [88, 36, 68, 87, 57, 62, 20, 72,  3, 46, 33, 67, 46, 55, 12, 32, 63, 93, 53, 69], \n",
-    "    [ 4, 42, 16, 73, 38, 25, 39, 11, 24, 94, 72, 18,  8, 46, 29, 32, 40, 62, 76, 36], \n",
-    "    [20, 69, 36, 41, 72, 30, 23, 88, 34, 62, 99, 69, 82, 67, 59, 85, 74,  4, 36, 16], \n",
-    "    [20, 73, 35, 29, 78, 31, 90,  1, 74, 31, 49, 71, 48, 86, 81, 16, 23, 57,  5, 54], \n",
-    "    [ 1, 70, 54, 71, 83, 51, 54, 69, 16, 92, 33, 48, 61, 43, 52,  1, 89, 19, 67, 48]\n",
-    "]"
+    "f = open(\"../data/0011_grid.txt\", \"r\")\n",
+    "grid = [[int(n) for n in s.split()] for s in f.readlines()]\n",
+    "f.close()"
    ]
   },
   {
@@ -135,12 +132,40 @@
     }
    ],
    "source": [
+    "# answer\n",
     "greatest_adjacent_numbers(4, get_lines(grid))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
+   "id": "e5e70db5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "331 μs ± 961 ns per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit greatest_adjacent_numbers(4, get_lines(grid))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1762f87e",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "b5fab265",
    "metadata": {},
    "outputs": [
@@ -148,13 +173,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "335 μs ± 491 ns per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
+      "330 μs ± 319 ns per loop (mean ± std. dev. of 7 runs, 1,000 loops each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o greatest_adjacent_numbers(4, get_lines(grid))\n",
-    "euler.save_benchmark(11, t)"
+    "bm = %timeit -o greatest_adjacent_numbers(4, get_lines(grid))\n",
+    "import euler\n",
+    "euler.save_benchmark(11, bm)"
    ]
   }
  ],
@@ -174,7 +200,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
