--- a/julia/problem_014.ipynb
+++ b/julia/problem_014.ipynb
@@ -5,24 +5,41 @@
    "id": "c6e2ad94-1596-4b05-a508-e71eeba93df9",
    "metadata": {},
    "source": [
-    "## Problem 14\n",
+    "# Problem 14\n",
     "https://projecteuler.net/problem=14"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "355f2fc8",
+   "id": "2dcc46b1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Julia v1.11.1\n"
+     ]
+    }
+   ],
    "source": [
-    "using BenchmarkTools\n",
-    "include(\"./euler.jl\");"
+    "println(\"Julia v\", string(VERSION))"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "id": "355f2fc8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using BenchmarkTools"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "id": "d49e09bd",
    "metadata": {},
    "outputs": [
@@ -42,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "f3298e86",
    "metadata": {},
    "outputs": [
@@ -65,25 +82,15 @@
    "id": "4638a8b2",
    "metadata": {},
    "source": [
-    "#### Solution 1 (sequence vector)"
+    "### Solution 1 (sequence vector)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "d16547ce",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "collatz (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function collatz(n)\n",
     "    sequence = Int64[]\n",
@@ -93,12 +100,14 @@
     "    end\n",
     "    push!(sequence, 1)\n",
     "    return sequence\n",
-    "end"
+    "end\n",
+    "\n",
+    "@assert collatz(13) == [13, 40, 20, 10, 5, 16, 8, 4, 2, 1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "e5fffb60",
    "metadata": {},
    "outputs": [
@@ -106,7 +115,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  1.101 s (4454575 allocations: 3.13 GiB)\n"
+      "  979.652 ms (4454575 allocations: 3.13 GiB)\n"
      ]
     },
     {
@@ -123,7 +132,7 @@
     "@btime begin\n",
     "   sequences = Dict(length(collatz(i)) => i for i in 1:1_000_000)\n",
     "   sequences[maximum(keys(sequences))]\n",
-    "end\n"
+    "end"
    ]
   },
   {
@@ -131,25 +140,15 @@
    "id": "ae83a515",
    "metadata": {},
    "source": [
-    "#### Solution 2 (sequence counter)"
+    "### Solution 2 (sequence counter)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "1bdf60bf",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "collatz (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function collatz(n)\n",
     "    counter = 1\n",
@@ -158,12 +157,14 @@
     "        iseven(n) ? n = even(n) : n = odd(n)\n",
     "    end\n",
     "    return counter\n",
-    "end"
+    "end\n",
+    "\n",
+    "@assert collatz(13) == 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "14d4465a",
    "metadata": {},
    "outputs": [
@@ -171,7 +172,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  832.713 ms (0 allocations: 0 bytes)\n"
+      "  744.381 ms (0 allocations: 0 bytes)\n"
      ]
     },
     {
@@ -204,25 +205,15 @@
    "id": "6d4ac324",
    "metadata": {},
    "source": [
-    "#### Solution 3 (oneliner)"
+    "### Solution 3 (oneliner)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "3ba4202e",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "collatz (generic function with 1 method)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "function collatz(n)\n",
     "    counter = 1\n",
@@ -231,15 +222,24 @@
     "        iseven(n) ? n = even(n) : n = odd(n)\n",
     "    end\n",
     "    return counter\n",
-    "end"
+    "end\n",
+    "\n",
+    "@assert collatz(13) == 10"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "a07607b6",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  746.129 ms (0 allocations: 0 bytes)\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -251,36 +251,15 @@
     }
    ],
    "source": [
-    "last(maximum((collatz(n), n) for n in 1:1_000_000, dims=1))"
+    "@btime last(maximum((collatz(n), n) for n in 1:1_000_000, dims=1))"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "a11a30b8",
+   "cell_type": "markdown",
+   "id": "414b031a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "BenchmarkTools.Trial: 6 samples with 1 evaluation.\n",
-       " Range \u001b[90m(\u001b[39m\u001b[36m\u001b[1mmin\u001b[22m\u001b[39m … \u001b[35mmax\u001b[39m\u001b[90m):  \u001b[39m\u001b[36m\u001b[1m830.916 ms\u001b[22m\u001b[39m … \u001b[35m848.966 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmin … max\u001b[90m): \u001b[39m0.00% … 0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[34m\u001b[1mmedian\u001b[22m\u001b[39m\u001b[90m):     \u001b[39m\u001b[34m\u001b[1m837.961 ms               \u001b[22m\u001b[39m\u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmedian\u001b[90m):    \u001b[39m0.00%\n",
-       " Time  \u001b[90m(\u001b[39m\u001b[32m\u001b[1mmean\u001b[22m\u001b[39m ± \u001b[32mσ\u001b[39m\u001b[90m):   \u001b[39m\u001b[32m\u001b[1m838.639 ms\u001b[22m\u001b[39m ± \u001b[32m  6.588 ms\u001b[39m  \u001b[90m┊\u001b[39m GC \u001b[90m(\u001b[39mmean ± σ\u001b[90m):  \u001b[39m0.00% ± 0.00%\n",
-       "\n",
-       "  \u001b[39m█\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m█\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m█\u001b[34m \u001b[39m\u001b[39m \u001b[39m█\u001b[32m \u001b[39m\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m█\u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m \u001b[39m█\u001b[39m \u001b[39m \n",
-       "  \u001b[39m█\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m█\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m█\u001b[34m▁\u001b[39m\u001b[39m▁\u001b[39m█\u001b[32m▁\u001b[39m\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m█\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m▁\u001b[39m█\u001b[39m \u001b[39m▁\n",
-       "  831 ms\u001b[90m           Histogram: frequency by time\u001b[39m          849 ms \u001b[0m\u001b[1m<\u001b[22m\n",
-       "\n",
-       " Memory estimate\u001b[90m: \u001b[39m\u001b[33m0 bytes\u001b[39m, allocs estimate\u001b[90m: \u001b[39m\u001b[33m0\u001b[39m."
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
    "source": [
-    "b = @benchmark last(maximum((collatz(n), n) for n in 1:1_000_000, dims=1))"
+    "### Save benchmark"
    ]
   },
   {
@@ -290,13 +269,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "euler.save_benchmark(14, b);"
+    "include(\"./euler.jl\")\n",
+    "bm = @benchmark last(maximum((collatz(n), n) for n in 1:1_000_000, dims=1))\n",
+    "euler.save_benchmark(14, bm);"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.0",
+   "display_name": "Julia 1.11.1",
    "language": "julia",
    "name": "julia-1.11"
   },
@@ -304,7 +285,7 @@
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.11.0"
+   "version": "1.11.1"
   }
  },
  "nbformat": 4,
