--- a/python/problem_014.ipynb
+++ b/python/problem_014.ipynb
@@ -14,9 +14,17 @@
    "execution_count": 1,
    "id": "ad7b9b35",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python v3.11.10\n"
+     ]
+    }
+   ],
    "source": [
-    "import euler"
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
    ]
   },
   {
@@ -28,6 +36,14 @@
    "source": [
     "def even(n): return int(n/2)\n",
     "def odd(n): return 3*n + 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ccccba89",
+   "metadata": {},
+   "source": [
+    "### Solution 1 (sequence list)"
    ]
   },
   {
@@ -46,27 +62,19 @@
     "        else:\n",
     "            n = odd(n)\n",
     "    sequence.append(1)\n",
-    "    return sequence"
+    "    return sequence\n",
+    "\n",
+    "assert collatz(13) == [13, 40, 20, 10, 5, 16, 8, 4, 2, 1]\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "8ae2547d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "assert collatz(13) == [13, 40, 20, 10, 5, 16, 8, 4, 2, 1]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
    "id": "33355599",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def longest_collatz(hi=1_000_000):\n",
+    "def longest_collatz(hi):\n",
     "    sequences = {}\n",
     "    for n in range(1, hi):\n",
     "        sequences[len(collatz(n))] = n\n",
@@ -75,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "41017f19",
    "metadata": {},
    "outputs": [
@@ -85,32 +93,144 @@
        "837799"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "# answer\n",
     "longest_collatz(1_000_000)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "1bf309df",
+   "execution_count": 6,
+   "id": "6b800915",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "13.2 s ± 251 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+      "11.7 s ± 36.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
      ]
     }
    ],
    "source": [
-    "t = %timeit -o longest_collatz(1_000_000)\n",
-    "euler.save_benchmark(14, t)"
+    "# benchmark\n",
+    "%timeit longest_collatz(1_000_000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dc3a04dd",
+   "metadata": {},
+   "source": [
+    "### Solution 2 (counter)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "5b2dda26",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def collatz(n):\n",
+    "    counter = 1\n",
+    "    while n != 1:\n",
+    "        counter += 1\n",
+    "        if n%2 == 0:\n",
+    "            n = even(n)\n",
+    "        else:\n",
+    "            n = odd(n)\n",
+    "    return counter\n",
+    "\n",
+    "assert collatz(13) == 10"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "e5fea66e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def longest_collatz(hi):\n",
+    "    sequences = {}\n",
+    "    for n in range(1, hi):\n",
+    "        sequences[collatz(n)] = n\n",
+    "    return sequences[max(sequences.keys())]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "0dfd60f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "837799"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# answer\n",
+    "longest_collatz(1_000_000)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "19413df5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.2 s ± 39.1 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "# benchmark\n",
+    "%timeit longest_collatz(1_000_000)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "899a8cf0",
+   "metadata": {},
+   "source": [
+    "### Save benchmark"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "0cd761be",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11.2 s ± 21.4 ms per loop (mean ± std. dev. of 7 runs, 1 loop each)\n"
+     ]
+    }
+   ],
+   "source": [
+    "bm = %timeit -o longest_collatz(1_000_000)\n",
+    "import euler\n",
+    "euler.save_benchmark(14, bm)"
    ]
   }
  ],
@@ -130,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.9"
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
