--- a/python/problem_015.ipynb
+++ b/python/problem_015.ipynb
@@ -19,22 +19,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Julia v1.11.1\n"
+      "Python v3.11.10\n"
      ]
     }
    ],
    "source": [
-    "println(\"Julia v\", string(VERSION))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "id": "011c2974",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using BenchmarkTools"
+    "print('Python v{}'.format(__import__('sys').version.split()[0]))"
    ]
   },
   {
@@ -68,27 +58,55 @@
    "id": "a68b9435",
    "metadata": {},
    "source": [
-    "### Solution 1 (custom function)"
+    "### Solution"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "ea3e7747",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def factorial(n):\n",
+    "    f = 1\n",
+    "    for i in range(2, n+1):\n",
+    "        f *= i\n",
+    "    return f\n",
+    "\n",
+    "assert factorial(5) == 120"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "9d7f9afa",
+   "id": "9242ed03",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "P (generic function with 1 method)"
+       "120"
       ]
      },
+     "execution_count": 3,
      "metadata": {},
-     "output_type": "display_data"
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "P(n, k)::BigInt = factorial(big(n))/(factorial(big(n-k))*factorial(big(k)))"
+    "factorial(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "9d7f9afa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def P(n, k):\n",
+    "    return int(factorial(n)/(factorial(n-k)*factorial(k)))"
    ]
   },
   {
@@ -101,17 +119,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "264f6ae4",
    "metadata": {},
    "outputs": [],
    "source": [
-    "@assert P(4, 2) == 6"
+    "assert P(4, 2) == 6"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
+   "id": "6d4fcf6d",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "137846528820"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# answer\n",
+    "P(40, 20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "1eec2363",
    "metadata": {},
    "outputs": [
@@ -119,56 +159,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "  581.492 ns (27 allocations: 680 bytes)\n"
+      "2.27 μs ± 42.9 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "137846528820"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "@btime P(40, 20)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "f96ef6df",
-   "metadata": {},
-   "source": [
-    "### Solution 2 (build-in function)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "179ecc4f",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "  1.166 ns (0 allocations: 0 bytes)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "137846528820"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "@btime binomial(40, 20)"
+    "# benchmark\n",
+    "%timeit P(40, 20)"
    ]
   },
   {
@@ -181,14 +178,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "6eaee537",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2.25 μs ± 18.5 ns per loop (mean ± std. dev. of 7 runs, 100,000 loops each)\n"
+     ]
+    }
+   ],
    "source": [
-    "include(\"./euler.jl\")\n",
-    "bm = @benchmark P(40, 20)\n",
-    "euler.save_benchmark(15, bm);"
+    "bm = %timeit -o P(40, 20)\n",
+    "import euler\n",
+    "euler.save_benchmark(15, bm)"
    ]
   },
   {
@@ -203,15 +208,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.11.1",
-   "language": "julia",
-   "name": "julia-1.11"
+   "display_name": "datascience",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
-   "file_extension": ".jl",
-   "mimetype": "application/julia",
-   "name": "julia",
-   "version": "1.11.1"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.10"
   }
  },
  "nbformat": 4,
